# task-managed-bot

./: .env.example  README.md  pyproject.toml
src/: database.py  main.py
