[project]
name = "gerenciador-tarefas-bot"
version = "0.1.0"
description = "Bot gerenciador de tarefas para o Telegram"
authors = [
    {name = "brunonativaa", email = "brunoferreirarodrigues26@outlook.com"}
]
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=21.0",
    "python-dotenv (>=1.2.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "gerenciador_tarefas_bot"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
